--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -374,10 +374,11 @@ html.blog-wrapper .table-of-contents li a.table-of-contents__link--active {
   z-index: 5;
   background-color: #fff;
   border: 1px solid var(--ifm-color-primary-lightest);
+  color: var(--ifm-color-primary-lighter);
 }
 
 .main-wrapper .theme-back-to-top-button {
-  background: rgba(171, 184, 255, 0.5);
+  background: var(--ifm-color-primary-lighter);
   border: 1px solid var(--violet);
   width: 3rem;
   height: 3rem !important;
@@ -388,10 +389,16 @@ html.blog-wrapper .table-of-contents li a.table-of-contents__link--active {
 }
 
 .main-wrapper .theme-back-to-top-button::after {
-  background: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 13V3.8L1.4 7.4L0 6L6 0L12 6L10.6 7.4L7 3.8V13H5Z' fill='%23ABB8FF'/%3E%3C/svg%3E")
+  background: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 13V3.8L1.4 7.4L0 6L6 0L12 6L10.6 7.4L7 3.8V13H5Z' fill='%23359962'/%3E%3C/svg%3E")
     no-repeat center center;
   mask: none !important;
   -webkit-mask: none;
+  transition: background 0.3s ease; /* Optional: for a smooth transition */
+}
+
+.main-wrapper .theme-back-to-top-button:hover::after {
+  background: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 13V3.8L1.4 7.4L0 6L6 0L12 6L10.6 7.4L7 3.8V13H5Z' fill='%23FFFFFF'/%3E%3C/svg%3E")
+    no-repeat center center;
 }
 
 .main-wrapper a.theme-back-to-top-button::after {
