--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -385,20 +385,25 @@ html.blog-wrapper .table-of-contents li a.table-of-contents__link--active {
 }
 
 .main-wrapper .theme-back-to-top-button:hover {
-  background: var(--ifm-color-primary-lighter);
+  background-color: #fff;
+  border: 1px solid var(--ifm-color-primary-lightest);
+  color: var(--ifm-color-primary-lighter);
 }
 
 .main-wrapper .theme-back-to-top-button::after {
-  background: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 13V3.8L1.4 7.4L0 6L6 0L12 6L10.6 7.4L7 3.8V13H5Z' fill='%23359962'/%3E%3C/svg%3E")
+  background: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 13V3.8L1.4 7.4L0 6L6 0L12 6L10.6 7.4L7 3.8V13H5Z' fill='%23FFFFFF'/%3E%3C/svg%3E")
     no-repeat center center;
   mask: none !important;
   -webkit-mask: none;
-  transition: background 0.3s ease; /* Optional: for a smooth transition */
 }
 
 .main-wrapper .theme-back-to-top-button:hover::after {
-  background: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 13V3.8L1.4 7.4L0 6L6 0L12 6L10.6 7.4L7 3.8V13H5Z' fill='%23FFFFFF'/%3E%3C/svg%3E")
+  background: url("data:image/svg+xml,%3Csvg width='12' height='13' viewBox='0 0 12 13' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 13V3.8L1.4 7.4L0 6L6 0L12 6L10.6 7.4L7 3.8V13H5Z' fill='%23359962'/%3E%3C/svg%3E")
     no-repeat center center;
+}
+
+.main-wrapper .theme-back-to-top-button:hover {
+  background-color: white;
 }
 
 .main-wrapper a.theme-back-to-top-button::after {
