--- a/src/pages/quick-start.module.css
+++ b/src/pages/quick-start.module.css
@@ -144,8 +144,17 @@
 }
 
 .cardIcon {
-  font-size: 2rem;
-  line-height: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
+}
+
+.cardIcon img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .favoriteButton {
